# LingClaude

./: .gitignore  AGENTS.md  CHANGELOG.md  CHARTER.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRINCIPLES.md  README.md  SECURITY.md  SELF_AUDIT_V2.md  TODO.md  collect_baseline_data.py  config.yaml  count_voting_rounds.py  pyproject.toml  result_example.py  result_example.py.bak  safety_config.yaml  test_dangerous_tmp.py  tmp_send_session.py  token_monitor_service.py  typescript  灵族四大套餐连通性完整报告.md
.github/: PULL_REQUEST_TEMPLATE.md
.ling-term-mcp/: sessions.json
.lingclaude/: handover.yaml
.sandbox/: sdth_detector.py
docs/: ACADEMIC_PUBLISHING_STRATEGY.md  AI_CONFLICT_OF_INTEREST_20260421.md  AI_INTROSPECTION_RESEARCH_PROPOSAL.md  API_QUIRKS.md  AUDIT_7D_LINGYUAN.md  AUDIT_REPORT_2026-04-06.md  AUDIT_REPORT_META_AUDIT_2026-04-06.md  BACKEND_PROTOCOL_v1.md  CODE_PATTERNS.md  COMMUNITY_AI_POSITIONING.md  COMPLIANCE_AUDIT_REPORT_20260429.md  COMPREHENSIVE_PLAN_v1.md  CRASH_INVESTIGATION_ARCHIVE_20260506.md  DISTRIBUTED_COMPUTING_PROPOSAL.md  EXT_INQUIRY_FAQ.md  FAMILY_GOALS_MEMBERS_FUSION.md  GOVERNANCE_VERIFICATION_AUDIT_20260421.md  HANDOFF.md  HARDWARE_EVALUATION_V3_GPU.md  IDENTITY_ANCHORING_MECHANISM.md  LEARNING_TASKS.md  LINGAI_STACK_BLUEPRINT.md  LINGCLAUDE_PLAN_v1.md  LINGCLAUDE_REFACTOR.md  LINGCODE_DESIGN_20260422.md  LINGCODE_GOALS.md  LINGCODE_PROPOSAL.md  LINGCODE_PROPOSAL_V3.md  LINGCODE_V1_PRODUCT.md  LINGFAMILY_STRATEGY_V1.md  LINGFLOW_LINGMINOPT_INTEGRATION.md  LINGFLOW_PLUS_POSITIONING.md  LINGMEMORY_LINGCODE_V10_REFACTOR.md  LINGMEMORY_USAGE.md  (+56 more)
(+429 files in other folders)
