[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lingclaude"
version = "0.1.0"
description = "灵克 (LingClaude) — 开源 AI 编程助手，内置自优化能力"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "tiktoken>=0.5.0",
    "aiohttp>=3.8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
]
optimization = [
    "optuna>=3.3.0",
    "psutil>=5.9.0",
]

[project.scripts]
lingclaude = "lingclaude.cli.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
